<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/website_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edittext_uri" />

        <Button
            android:id="@+id/open_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/button_uri" />

        <EditText
            android:id="@+id/calling_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edittext_number" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/button_number" />

        <EditText
            android:id="@+id/share_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edittext_share" />

        <Button
            android:id="@+id/share_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/button_share" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>